WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281867
[view-transitions] "Capture old state" should clean up captured flag on error
https://bugs.webkit.org/show_bug.cgi?id=281867
Summary
[view-transitions] "Capture old state" should clean up captured flag on error
Tim Nguyen (:ntim)
Reported
2024-10-21 12:26:12 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Nguyen (:ntim)
Comment 1
2024-10-21 12:26:30 PDT
https://github.com/w3c/csswg-drafts/issues/11058
https://github.com/w3c/csswg-drafts/commit/f894d41d3ce3f75b82339aa454af4e1b7ac2a325
Radar WebKit Bug Importer
Comment 2
2024-10-21 12:27:01 PDT
<
rdar://problem/138338884
>
Tim Nguyen (:ntim)
Comment 3
2024-10-21 12:50:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35536
Tim Nguyen (:ntim)
Comment 4
2024-10-21 13:14:22 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/48742
EWS
Comment 5
2024-10-21 14:37:24 PDT
Committed
285535@main
(45e2f437b91c): <
https://commits.webkit.org/285535@main
> Reviewed commits have been landed. Closing PR #35536 and removing active labels.
EWS
Comment 6
2024-11-07 11:57:40 PST
Committed
283286.447@safari-7620-branch
(b9cead02867b): <
https://commits.webkit.org/283286.447@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2237 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug