[view-transitions] "Capture old state" should clean up captured flag on error https://bugs.webkit.org/show_bug.cgi?id=281867 rdar://138338884

Reviewed by Matt Woodrow.

This was a spec bug, see:

https://github.com/w3c/csswg-drafts/issues/11058
https://github.com/w3c/csswg-drafts/commit/f894d41d3ce3f75b82339aa454af4e1b7ac2a325

We were not cleaning up properly the "captured in view transition" flag properly on error,
which lead to renderers not being painted despite the view transition having been skipped.

* LayoutTests/imported/w3c/web-platform-tests/css/css-view-transitions/capture-old-state-error-flag-cleanup-expected.xht: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-view-transitions/capture-old-state-error-flag-cleanup.html: Added.
* Source/WebCore/dom/ViewTransition.cpp:
(WebCore::ViewTransition::captureOldState):

Canonical link: https://commits.webkit.org/285535@main